cambio en index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,46 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <title>Paraguay Maps</title>
+
+    <!-- Meta tags SEO -->
+    <meta name="description" content="Explora los mapas de Paraguay, conoce sus distritos, ciudades y paisajes. Sumérgete en la riqueza geográfica y cultural de Paraguay.">
+    <meta name="keywords" content="Paraguay, mapas, ciudades, geografía, cultura, distritos, turismo, información, mapas Paraguay">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Paraguay Maps">
+
+    <!-- Meta tags Open Graph (Facebook y otras plataformas) -->
+    <meta property="og:title" content="Paraguay Maps - Descubre la riqueza geográfica de Paraguay">
+    <meta property="og:description" content="Explora los mapas de Paraguay y conoce más sobre sus ciudades, distritos y paisajes.">
+    <meta property="og:image" content="images/py-03.png">
+    <meta property="og:url" content="https://www.paraguaymaps.com">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Paraguay Maps">
+    
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ParaguayMaps"> <!-- Tu usuario de Twitter -->
+    <meta name="twitter:title" content="Paraguay Maps - Descubre la riqueza geográfica de Paraguay">
+    <meta name="twitter:description" content="Explora los mapas de Paraguay, conoce sus distritos, ciudades y paisajes.">
+    <meta name="twitter:image" content="images/py-03.png"> <!-- Cambia por la URL de tu imagen -->
+
+    <!-- Meta tags para Instagram (principalmente a través de Open Graph) -->
+    <meta property="og:image:alt" content="Mapa de Paraguay - Descubre la riqueza geográfica del país.">
+
+    <!-- Canonical URL para SEO -->
+    <link rel="canonical" href="https://www.paraguaymaps.com">
+
+    <!-- Enlaces a redes sociales -->
+    <link rel="me" href="https://www.instagram.com/paraguay_maps/" type="text/html">
+    <link rel="me" href="https://twitter.com/ParaguayMaps" type="text/html">
+    <link rel="me" href="https://www.facebook.com/ParaguayMaps" type="text/html">
+
+    <!-- Open Graph para página de Instagram -->
+    <meta property="og:see_also" content="https://www.instagram.com/paraguay_maps/">
+    <meta property="og:see_also" content="https://twitter.com/ParaguayMaps">
+    <meta property="og:see_also" content="https://www.facebook.com/ParaguayMaps">
+
     <title>Paraguay Maps</title>
   </head>
   <body>
